headerdir = ${prefix}/include
header_DATA = compat_getopt.h \
        compat.h \
        i2c-dev.c \
        compat_netdb.h \
        ow_1820.h \
        ow_1821.h \
        ow_1921.h \
        ow_1923.h \
        ow_1963.h \
        ow_1977.h \
        ow_1991.h \
        ow_1993.h \
        ow_2401.h \
        ow_2404.h \
        ow_2405.h \
        ow_2406.h \
        ow_2408.h \
        ow_2409.h \
        ow_2413.h \
        ow_2415.h \
        ow_2423.h \
        ow_2433.h \
        ow_2436.h \
        ow_2438.h \
        ow_2450.h \
        ow_2502.h \
        ow_2505.h \
        ow_2760.h \
        ow_2804.h \
        ow_2890.h \
        ow_devices.h \
        ow.h \
        ow_counters.h \
        ow_connection.h \
        ow_debug.h \
        ow_lcd.h \
        ow_none.h \
        ow_settings.h \
        ow_simultaneous.h \
        ow_stats.h \
        ow_stub.h \
        ow_system.h \
        ow_xxxx.h

EXTRA_DIST = ${header_DATA}

clean-generic:

	@RM@ -rf *~

