noinst_HEADERS =          \
	compat_getopt.h       \
        compat.h          \
        i2c-dev.h         \
        compat_netdb.h    \
        ow.h              \
        ow_1820.h \
        ow_1821.h \
        ow_1921.h \
        ow_1923.h \
        ow_1954.h \
        ow_1963.h \
        ow_1977.h \
        ow_1991.h \
        ow_1993.h \
        ow_2401.h \
        ow_2404.h \
        ow_2405.h \
        ow_2406.h \
        ow_2408.h \
        ow_2409.h \
        ow_2413.h \
        ow_2415.h \
        ow_2423.h \
        ow_2430.h \
        ow_2433.h \
        ow_2436.h \
        ow_2438.h \
        ow_2450.h \
        ow_2502.h \
        ow_2505.h \
        ow_2760.h \
        ow_2804.h \
        ow_2890.h \
        ow_avahi.h        \
        ow_bitwork.h      \
        ow_cache.h        \
        ow_charblob.h     \
        ow_codes.h        \
        ow_counters.h     \
        ow_connection.h   \
        ow_debug.h        \
        ow_device.h       \
        ow_devices.h      \
        ow_dirblob.h      \
        ow_dl.h           \
        ow_dnssd.h        \
        ow_filetype.h     \
        ow_functions.h    \
        ow_global.h       \
        ow_integer.h      \
        ow_interface.h    \
        ow_localtypes.h   \
        ow_lcd.h          \
        ow_memblob.h      \
        ow_message.h      \
        ow_mutexes.h      \
        ow_none.h         \
        ow_onewirequery.h \
        ow_opt.h          \
        ow_parsedname.h   \
        ow_pid.h          \
        ow_settings.h     \
        ow_simultaneous.h \
        ow_stateinfo.h    \
        ow_stats.h        \
        ow_stub.h         \
        ow_system.h       \
        ow_thermocouple.h \
        ow_transaction.h  \
        ow_xxxx.h         \
        rwlock.h          \
        netlink.h         \
        rtnetlink.h       \
        w1_netlink.h      \
        sem.h

clean-generic:

	@RM@ -f *~ .*~

