noinst_HEADERS =           \
        compat_getopt.h    \
        compat.h           \
        i2c-dev.h          \
        compat_netdb.h     \
        connector.h        \
        jsmn.h             \
        ow.h               \
        ow_1820.h          \
        ow_1821.h          \
        ow_1921.h          \
        ow_1923.h          \
        ow_1954.h          \
        ow_1963.h          \
        ow_1977.h          \
        ow_1991.h          \
        ow_1993.h          \
        ow_2401.h          \
        ow_2404.h          \
        ow_2405.h          \
        ow_2406.h          \
        ow_2408.h          \
        ow_2409.h          \
        ow_2413.h          \
        ow_2415.h          \
        ow_2423.h          \
        ow_2430.h          \
        ow_2433.h          \
        ow_2436.h          \
        ow_2438.h          \
        ow_2450.h          \
        ow_2502.h          \
        ow_2505.h          \
        ow_2760.h          \
        ow_2804.h          \
        ow_2890.h          \
        ow_alloc.h         \
        ow_arg.h           \
        ow_avahi.h         \
        ow_bae.h           \
        ow_bitfield.h      \
        ow_bitwork.h       \
        ow_busnumber.h     \
        ow_bus_routines.h  \
        ow_cache.h         \
        ow_charblob.h      \
        ow_cmciel.h        \
        ow_codes.h         \
        ow_communication.h \
        ow_connection.h    \
        ow_connection_in.h \
        ow_connection_out.h\
        ow_counters.h      \
        ow_debug.h         \
        ow_detect.h        \
        ow_device.h        \
        ow_devices.h       \
        ow_dirblob.h       \
        ow_dl.h            \
        ow_dnssd.h         \
        ow_eds.h           \
        ow_eeef.h          \
        ow_example_slave.h \
        ow_external.h      \
        ow_fd.h            \
        ow_filetype.h      \
        ow_functions.h     \
        ow_generic_read.h  \
        ow_generic_write.h \
        ow_global.h        \
        ow_integer.h       \
        ow_interface.h     \
        ow_localtypes.h    \
        ow_localreturns.h  \
        ow_lcd.h           \
        ow_master.h        \
        ow_memblob.h       \
        ow_message.h       \
        ow_mutexes.h       \
        ow_none.h          \
        ow_onewirequery.h  \
        ow_opt.h           \
        ow_parse_address.h \
        ow_parsedname.h    \
        ow_parse_sn.h      \
        ow_pid.h           \
        ow_port_in.h       \
        ow_pressure.h      \
        ow_programs.h      \
        ow_reset.h         \
        ow_return_code.h   \
        ow_settings.h      \
        ow_search.h        \
        ow_sibling.h       \
        ow_simultaneous.h  \
        ow_standard.h      \
        ow_stateinfo.h     \
        ow_stats.h         \
        ow_stub.h          \
        ow_system.h        \
        ow_temperature.h   \
        ow_thermocouple.h  \
        ow_timer.h         \
        ow_traffic.h       \
        ow_transaction.h   \
        ow_usb_cycle.h     \
        ow_usb_msg.h       \
        ow_visibility.h    \
        ow_w1.h            \
        ow_w1_seq.h        \
        rwlock.h           \
        netlink.h          \
        w1_netlink.h       \
        sem.h              \
        telnet.h

clean-generic:

	@RM@ -f *~ .*~

